# ChangeLog for dev-util/ccache
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/ccache/ChangeLog,v 1.146 2014/12/21 15:32:09 floppym Exp $

  21 Dec 2014; Mike Gilbert <floppym@gentoo.org> ccache-3.1.9-r4.ebuild:
  Move stable keywords forward.

*ccache-3.2.1-r1 (21 Dec 2014)
*ccache-3.1.9-r4 (21 Dec 2014)

  21 Dec 2014; Mike Gilbert <floppym@gentoo.org> +ccache-3.1.9-r4.ebuild,
  +ccache-3.2.1-r1.ebuild, +files/ccache-config-3:
  ccache-config: Source /lib/gentoo/functions.sh, bug 504380.

*ccache-3.2.1 (12 Dec 2014)

  12 Dec 2014; Justin Lecher <jlec@gentoo.org> -ccache-3.2.ebuild,
  +ccache-3.2.1.ebuild, metadata.xml:
  Version Bump, fixes #529998

*ccache-3.2 (20 Nov 2014)

  20 Nov 2014; Mike Frysinger <vapier@gentoo.org> +ccache-3.2.ebuild:
  Version bump.

  04 Nov 2014; Mike Frysinger <vapier@gentoo.org> files/ccache-config-2:
  Trim empty ccache dirs automatically #517242 by Arfrever Frehtes Taifersar
  Arahesis.

*ccache-3.1.10-r1 (01 Nov 2014)

  01 Nov 2014; Mike Frysinger <vapier@gentoo.org> +ccache-3.1.10-r1.ebuild,
  +files/ccache-3.1.10-real-temp-files.patch,
  +files/ccache-3.1.10-size-on-disk.patch:
  Fix temp file usage to not rely on pids (fixes running in pid namespaces).
  Fix disk usage checks #456178 by Richard Yao.  Always use /usr/lib/ccache/bin/
  #509956 by Michał Górny.

  01 Nov 2014; Mike Frysinger <vapier@gentoo.org> files/ccache-config:
  Trim empty ccache dirs automatically #517242 by Arfrever Frehtes Taifersar
  Arahesis.

*ccache-3.1.10 (22 Oct 2014)

  22 Oct 2014; Mike Frysinger <vapier@gentoo.org> +ccache-3.1.10.ebuild:
  Version bump.

  08 Mar 2014; Mike Frysinger <vapier@gentoo.org> files/ccache-config-2:
  Use `command` rather than `type` #503428 by Naohiro Aota.

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> ccache-3.1.9-r3.ebuild:
  Stable for sparc, wrt bug #495658

  19 Jan 2014; Agostino Sarubbo <ago@gentoo.org> ccache-3.1.9-r3.ebuild: