@@ -24,6 +24,7 @@ DIST ccache-3.1.7.tar.gz 342160 SHA256 278f4d1d38fc530221c7ce73606f34bc3a5df7e26
 DIST ccache-3.1.8.tar.xz 238304 SHA256 9c4134a88d2566ba41a070a6cedc53fa92e1008f40c116c61e73dde16453d63e SHA512 02ef3d3843e34571c781ecfbe6ab375b0afd81c5da36ce5264ee646368f5c96bd2a7748a8e699758ab5d10d06a39de7fb6fa70c609cd157a8fd87f9d009c5f94 WHIRLPOOL af144139454dc6334c96be149d5912e3795a9ee0d9c47c0159dbc05697be6729d268dbf70330732ea49c5b085b0e4845c029fe1f231ff62e882fd769dd0ce79e
 DIST ccache-3.1.9.tar.xz 238988 SHA256 4981fdf3ad851de400d94083a0d03f115ce9ce8062c3fd7a291630294b0006c4 SHA512 b73f5816bb87c2d94200473510ea42a304c5a2c5e5f14720c513574ce3eb983423c5849a786a89df70cbb09852d9ec2761ad37a820a767d7350e1a3243148ac0 WHIRLPOOL 61ef671aae68516ecfaee88a50b8f442968a7ab24595fd7dfc652ab27de80834d90510c62cfcc75dd88e1f3832989633f518ebe5984149c16d5ab9848cff05fc
 DIST ccache-3.2.1.tar.xz 297868 SHA256 872af34e1d2cef18694001d29db7f167d644e7602ca32cd6c74b28d81458bd9d SHA512 ef0e56f2d1775fb0f401f48cca2a65eb415f4e2ccf0bcfd769045a9c08c3c2977db4edea12e06629f4cb5406cde23cd3ee0910e2e4d5eff9376227fa23c78a7a WHIRLPOOL f3d07cf142258d588a1c6cb9ba77d31d7b568cd18ae131ed3526595c809352b0fa30ae61b0bfcbfde3ea8d959c545119662c25af0cd03c97517be361315e1ffe
+DIST ccache-3.2.2.tar.xz 300808 SHA256 4f0d99699f24d198494addca0f41a93b0150cdfd01491f15a5d7eb02c7c2a0ca SHA512 fc438f3b00baa41076eee3e5783ea53a208eb348343e587c6f729f7e98462cd20c720fe323fe08f271bc14dae48f7828cef769882f028f3772992989b87b075d WHIRLPOOL 095a125e869910644622b98b7720a01ccc235fbeb8c84ec52017fe52f82fe7b8122584c3e5fa4d39c1344e9c062517a1edb46c3e64fe649e845ed5c1fb455c5a
 EBUILD ccache-2.4-r6.ebuild 2327 SHA256 1b31298cdb124826aadfe4c17f3b4118348f965797b816964f0eaf1f7f0d34bf SHA512 6082b1a9aec8e61fcb7eb3379effa14385253bb55dc59c7553930135c0ce41da540d8757201c9690367d726e9b00ec966c84c0d72eb776c3547c1d7395f0b3c1 WHIRLPOOL 55a6f19a7dc1541aef42e5b8f8028f3d41fe2438172c73b4d33682c6023f92568c4abb5c08c2ee8d59cb1c7eadf0857cd8599a6774a5138439947a2b8865f0ef
 EBUILD ccache-2.4-r7.ebuild 2412 SHA256 2a49abd73c7dc5a1464c3842f0f261aa3be666e6598aa96bcad4b8892373c9da SHA512 db1c69fa76cf2a2233141da7a339f22ce107cb00db7d446280b240800d9b446940e2734f96faa59ab88f763d4a4a069ed35c741ecb7a3c2e92f89461a1900216 WHIRLPOOL dab768b6447824c43cfbdb87150c5209aecddf18c88e0f4c64be7723ac20fcafac2c3b022706925723395a1c3a33ce6b886855191b466ef2ebffcd9396037858
 EBUILD ccache-2.4-r8.ebuild 2493 SHA256 cf1e11acbe5ab243232cabffee3776f272198b3d67d726aedc74cf6ecd7b44b3 SHA512 f25365a5877a0d97a55104712492b56f9286ca03a3743d5e1c43919a1ca9496696d38fe4a60c408e10fab1f52b7023aeb19b809e4d21d850f67bf8ea45283d59 WHIRLPOOL a942be540fc002f4b8f91a96a21f8b281ca4667baedfb51a2a27a0e48e934b25bd55d17cfd65299735fb39f54276ef5435d50718989f018fbc7a1717b7431df6
@@ -44,12 +45,23 @@ EBUILD ccache-3.1.9-r4.ebuild 2340 SHA256 b9690b0c91b332ad3f463b96550a8b79c6ddeb
 EBUILD ccache-3.1.9.ebuild 1930 SHA256 10c374f8e0896172880bf9a7e93351c8f5676e20a9d050b9e3b1a93e76bf1411 SHA512 4a2f148cfe8526fb9fa70b0b9339810af2811ba7d077a90fdc8b8b2280ea80a4790c9e475344f88bde4e01dbeb93ffa429d8e2d417537006201abd1eb2057284 WHIRLPOOL 104505aaf61b01fc384ff8e6118dfe51fd29b50f4c541a8cf31168a661f8216735368ea280b7e1e9bde640bf5f853e45d12cb321cde648f61578ee82a08e1721
 EBUILD ccache-3.2.1-r1.ebuild 2245 SHA256 86f0f4f1d25623c8d82ecaa0ac047bf0864e32c191f09dbad51329a6d2d7615e SHA512 867eecdd7ab7c5a168cdf9000cdd08d838fba88fa909e2d65c5438dd6c426285a2d54527a47de70ef1a7813a4fb4610b0c109e0bef6bd1de0a5ee7f0b170fb5e WHIRLPOOL 50095e6c0078490cd724bc3809ab96956f8d93bc25ab755468d5ae3fe8d33afa3d985338b0a2366fa749610bb1e09f2188dd92676758f951fdf12c894e297a8d
 EBUILD ccache-3.2.1.ebuild 2213 SHA256 0f235cb087cf1774fe3864f2ce0d67ef59f840238c0c15639d84cec7a0c36d56 SHA512 acf1767e4fa032ebbb8d9420a15dda2fbc320538bd7c1fb00afa36b4f5468e31ea44b7e952105cae9012f93c22d43b1ffd9173f3c045d6ffa6cb41f9fb8599f7 WHIRLPOOL 3919ee0c689ef2de322d7edc37a048e123cdc410c4afafc85802e3d6d39370a0c75cb19117a121c0bae17c13342e9b14a5c0b615dd4c01a4ddc10d4da5fed853
-MISC ChangeLog 18920 SHA256 afe30aecdda7a7e35f3a32f929c2499cce0b4ab315771a749dc5c780bbafcea5 SHA512 4bc6b7e71cd2eb954dd866696100d2765eccef62679752f1513052c157ca64f27eeb5665f3552b8b9f61ff45dd36547b333e78f059271877c9e2ab2e02a85437 WHIRLPOOL 07f545916974c0d18f2a9f276ae4f557081a040f9266c37fdfbf09f838aca1511376e1644d5c052424faf1a2c80846a09a4bc303567cda34151aed2731213225
+EBUILD ccache-3.2.2.ebuild 2241 SHA256 712da02d1dfdb10456a7cb8e35e16021e0a02ec0c03a33bb3f5c771e8e73f95d SHA512 1274ebb191de3774d076e6d4524b58f6aaf0e7c3b2a6a0b78140f4abb5b073e522f3380e06ba83730a6e4dbb5c8f264176a7db9113e88a27fa27dcdda920f682 WHIRLPOOL 1bd1ea21a1d2a60b90603885325f97b88ba002f04e828416c500f0f3e8574a0005780e76415dff12acfe3683f3b65b0266bfef42625a06fa50a59bf21be21c79
+MISC ChangeLog 19037 SHA256 f46702c2597f60fbe4835f2f26d832409bfade7b14bdd94218dc5efa1d324f0e SHA512 51d871b5003f37923700bc910bc138c38f2586b57c16dfc0a373666f8bd046de9e13a2958e942ef143362b35681c08a418503e9acd9b30784b5efcfa12141621 WHIRLPOOL 034422195019a428a871f0aa779f02f4dcff51e1e3776bf9d1db9c661bffaae6b5e5fac7199c6d09615495e457a2fb5122bd8166c05fd7cb2487a03be292d6f7
 MISC metadata.xml 418 SHA256 32bc83c47bf71f7b4b9ba775fe6912a973e5561257bc02e2ba8d44ea596786c8 SHA512 f5e288e9a8fa9007e8f6704e12235e1c73ad887102813ca0a573ada97304b8f4d4956c9bd9041c73d90e4b4a328b317e2aa51a026edff7f54f203a802045895f WHIRLPOOL b8ff848f8911f74c5dc3610d4fae4645ef02004b6d0c72219c5ed8e20964dac58a94275099af02e8d820c3fa533c321aef0aba6c79b31976c398f7ee55a1cc80
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlSW5/oACgkQC77qH+pIQ6Q0UgD+K8Dz4IIanfPyKOlsD/bj/XI+
-/HtL+pHVm24CDetUk30A/RUYmBDdS+mXbjTAqNhjxh6nL3TAkvXlVEMvCFLAnMAO
-=qzm8
+iQIcBAEBCAAGBQJVUBzJAAoJEPGu1DbS6WIARzMP/3rqLkOApy0dIjzEthnR/HLt
+E2bHSwiAj63lwzGiwdhlQUIvQuJrOQPue/1CPsPsFMf6nariN9gI2Mfamf71KaLH
+K44dNdvlMtLGXlHFtmG+NRz7oELIw3CTs/qP+LnCabWM2ftrB9BlyCn4pHXFVTUf
+aVs4Y8iYUklCCCcmDXlZrYQcLYBxNf6A8dKFgyZuUvuH/EHSZ0UtbkCGn4C0rnI3
+roWeKGHzsJI6Fi3m9ULl8VMdu8iCP+QqVJGQa/lvvPR5Xlls22IeEjkStgNG96ma
+xUKtnDN6pyQufPMn3jzSWcUtkm85YEGEjqIfGajvlW9A33GVUlGmukyrTpvUAn3n
+RpyqyQB8J1fKLokrr899/skM5KBpHFb+1zuh0tUSlKW/1FwehYtKfB//GEHk7dIv
+FS0AdVYX3OmYAmFiAW3JhMEWJv6xheZY1GfZDTvb7AxTUW/sTAFNqv0HARqCb2WO
+UCMYx19YrT1MrKH9RiF1PqDMb8oIhdRL5F+7JqueWFCe5MVFK9k75XCHcHHmJvw3
+PKxACcrB4bjA/48P2bGRFEdrf5HiDa2SYOuQl1AyoBuXf4HTT+PlT4jnugU7mkj9
+x3AVUjnKT3XFnZybgTXmwRK8Y/a5aO4/NaMYU6o3gTEx6k/1/2O3n1cfAsv5wPgC
+xcrLRFSctjm4Wt8j4Um8
+=RJle
 -----END PGP SIGNATURE-----
