@@ -1,0 +1,12 @@
+DEFINED_PHASES=install postinst prepare prerm
+DEPEND=app-arch/xz-utils sys-libs/zlib
+DESCRIPTION=fast compiler cache
+EAPI=5
+HOMEPAGE=http://ccache.samba.org/
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~x64-solaris ~x86-solaris
+LICENSE=GPL-3
+RDEPEND=app-arch/xz-utils sys-libs/zlib sys-apps/gentoo-functions
+SLOT=0
+SRC_URI=http://samba.org/ftp/ccache/ccache-3.2.2.tar.xz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	42408102d713fbad60ca21349865edb4
+_md5_=087942942302ddf85ed64c25b3297e61
